<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="130dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/lable_app"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:text="@string/id_lbl"
                android:textColor="#000000"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold"/>

            <EditText
                android:backgroundTint="@color/colorAccent"
                android:id="@+id/idTxt"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/id_str"
                android:textColor="#fff"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/name_lbl"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/colorAccent"
            android:inputType="textPersonName"
            android:hint="@string/name_str"
            android:textColor="#fff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/npm_lbl"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <EditText
            android:id="@+id/npmNmr"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/colorAccent"
            android:inputType="number"
            android:hint="@string/npm_str"
            android:textColor="#fff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:padding="5dp"
            android:text="@string/jurusan_lbl"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/jurusanTxt"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:ems="10"
            android:backgroundTint="@color/colorAccent"
            android:inputType="textCapWords"
            android:hint="@string/jurusan_str"
            android:textColor="#fff"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/masukBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/masuk_btn"/>

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/update_btn"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/hapusBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/hapus_btn"/>

        <Button
            android:id="@+id/tampilBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/tamplikan_btn"/>

    </LinearLayout>

</LinearLayout>